# prd-maker

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  INITIAL.md  README.md  app.py  docker-compose.yml  pyproject.toml
.gitea/: README.md
.gitea/workflows/: deploy.yml
doc/: prd.md  tech-stack.md
src/prd_maker/: __init__.py
src/prd_maker/config/: __init__.py  settings.py
src/prd_maker/core/: __init__.py  llm_manager.py  prd_generator.py  project_storage.py
src/prd_maker/models/: __init__.py  prd.py  project.py
src/prd_maker/ui/: __init__.py  main.py  steps.py
